--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<title>¡Hola Mundo!</title>
@@ -8,6 +8,8 @@
 <h:body>
 	<h1>¡Hola Mundo!</h1>
 	<p>Esta es la primera versión de Laie - Aplicación para la gestión de horarios.</p>
+	
+	<p:spinner />
 </h:body>
 
 </html>
