--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,7 +14,7 @@
 				<div class="card user-card">
 					<div class="card-header"></div>
 					<div class="user-card-content">
-						<cc:avatar value="#{sessionUser.user}" size="xlarge" class="user-image"/>
+						<cc:avatar value="#{sessionUser.user}" size="xlarge" />
 
 						<div class="user-card-name">#{sessionUser.user}</div>
 						<div class="user-card-role">#{sessionUser.user.jobPosition}</div>
