--- a/src/main/webapp/users.xhtml
+++ b/src/main/webapp/users.xhtml
@@ -2,7 +2,7 @@
 	xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui"
 	xmlns:cc="http://xmlns.jcp.org/jsf/composite/components" template="/WEB-INF/templates/template.xhtml">
 
-	<ui:define name="title">#{i18n[users.users]}</ui:define>
+	<ui:define name="title">LAIE - #{i18n['users.users']}</ui:define>
 
 	<ui:param name="selectedMenu" value="users" />
 
@@ -21,13 +21,14 @@
 				<div class="p-grid">
 					<div class="p-col-12 p-lg-5">
 						<div class="searchBar ui-fluid">
-							<cc:inputSearch searchText="#{usersView.searchText}" searchAction="#{usersView.search}"
-								update="@form" />
+							<cc:inputSearch searchText="#{usersView.searchText}" searchAction="#{usersView.search}" update="@form" />
 						</div>
 					</div>
 					<div class="p-col-12">
 						<p:dataTable id="users" value="#{usersView.users}" var="user" emptyMessage="#{i18n['user.no_users_found']}"
-							paginator="true" paginatorPosition="bottom" rows="15" sortMode="single" lazy="true">
+							paginator="true" paginatorPosition="bottom" rows="15" sortMode="single" lazy="true" selectionMode="single"
+							selection="#{usersView.selectedUser}" rowKey="#{user.uid}">
+							<p:ajax event="rowSelect" listener="#{usersView.viewUser}" />
 							<p:column headerText="#{i18n['user.name']}" sortBy="#{user.name}">
 								<h:link outcome="#{Page.USER.getUrl()}">
 									<cc:avatar value="#{user}" styleClass="p-mr-2" />
@@ -37,7 +38,7 @@
 							</p:column>
 
 							<p:column headerText="#{i18n['user.role']}">
-								<p:tag styleClass="user-role role-#{user.role}" value="#{i18n[user.role]}" />
+								<p:tag styleClass="user-role role-#{user.role}" value="#{i18n['role.'.concat(user.role)]}" />
 							</p:column>
 
 							<p:column headerText="#{i18n['user.manager']}">
