--- a/src/main/webapp/user/edit.xhtml
+++ b/src/main/webapp/user/edit.xhtml
@@ -18,7 +18,7 @@
 								outcome="/user"
 								icon="pi pi-times"
 								styleClass="p-mr-2" >
-								<f:param name="uid" 
+								<f:param name="userUid" 
 									value="#{editUserView.user.uid}" />
 							</p:button>
 							<p:commandButton value="#{i18n['action.save']}" 
